# galaxy_tracer

./: Cargo.toml  rgb.py  sbc_flux.txt  wavelengths.txt
.cargo/: config.toml
assets/shaders/: extinction_cache_compute.wgsl  intensity_old.wgsl  intensity_shared.wgsl  noise_compute.wgsl  noise_functions.wgsl  noise_imports.wgsl  shader_galaxy_volume.wgsl  star_instancing.wgsl
assets/shaders/common/: noise_functions.wgsl
crates/volume_upscaler/: Cargo.toml
crates/volume_upscaler/examples/: basic.rs
crates/volume_upscaler/src/: background_camera.rs  background_upscale.rs  background_upscale.wgsl  lib.rs  prelude.rs  taa_ref.rs
src/: camera.rs  fps_widget.rs  galaxy_config.rs  galaxy_texture.rs  galaxy_xz_painter.rs  main.rs  prelude.rs  render.rs
src/benchmarks/: benchmarks.rs
src/galaxy/: arm_lut_generator.rs  galaxy_component_density.rs  galaxy_config.rs  galaxy_xz_painter.rs  mod.rs  spawn_stars.rs  star_instancing.rs
src/graphics/: benchmarks.rs  extinction_cache.rs  galaxy_texture.rs  galaxy_volume_render.rs  mod.rs  noise_texture.rs  render.rs  shader_types.rs  star_instancing.rs  sub_render.rs
src/ui/: camera.rs  config_egui.rs  config_ui.rs  fps_widget.rs  mod.rs
