[package]
name = "galaxy_tracer"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.3"
bevy_simple_text_input = "0.10.2"
bytemuck = "1.21.0"
